--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -39,21 +39,13 @@ a:hover {
 }
 
 #title {
-  text-align: center;
+  text-align: right;
   font-size: 30px;
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .1em solid white; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .07em; /* Adjust as needed */
   animation:
-    typing 3s steps(30, end),
     blink-caret 1s step-end infinite;
-}
-
-@keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
 }
 
 @keyframes blink-caret {
