--- a/assets/css/write.css
+++ b/assets/css/write.css
@@ -68,6 +68,17 @@ textarea:focus {
   font-size: 14px;
 }
 
+#moon {
+  position: absolute;
+  top: 45px;
+  right: 30px;
+  font-size: 16px;
+}
+
+#moon:hover {
+  cursor: crosshair;
+}
+
 #outerBar {
   width: 100%;
   height: 5px;
